opam-version: "2.0"
maintainer: "Sylvain Le Gall <sylvain+ocaml@le-gall.net>"
authors: [ "Sylvain Le Gall" ]
homepage: "http://ocaml-fileutils.forge.ocamlcore.org/"
license: "LGPL-2.1 with OCaml linking exception"
dev-repo: "git+https://github.com/gildor478/ocaml-fileutils.git"
bug-reports: "https://github.com/gildor478/ocaml-fileutils/issues"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
  "ocaml"
  "base-unix"
  "base-bytes"
  "stdlib-shims"
  "dune" {build & >= "1.11.0"}
  "ounit" {with-test & >= "2.0.0"}
]
synopsis: "API to manipulate files (POSIX like) and filenames"
