opam-version: "2.0"
maintainer: "Sylvain Le Gall <sylvain+ocaml@le-gall.net>"
authors: [ "Sylvain Le Gall" ]
homepage: "https://github.com/gildor478/ocaml-fileutils"
license: "LGPL-2.1 with OCaml linking exception"
dev-repo: "git+https://github.com/gildor478/ocaml-fileutils.git"
bug-reports: "https://github.com/gildor478/ocaml-fileutils/issues"
doc: "https://gildor478.github.io/ocaml-fileutils/"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" {>= "4.03"}
  "base-unix"
  "base-bytes"
  "stdlib-shims"
  "dune" {>= "1.11.0"}
  "ounit" {with-test & >= "2.0.0"}
]
synopsis: "API to manipulate files (POSIX like) and filenames"
description: """
This library provides an API to perform POSIX like operations on files like:

- mv
- cp
- rm
- mkdir
- touch
- which...

It also providesa module to manipulate abstract filenames:

- classification
- make_relative: made a filename relative to another
- make_absolute
"""
