(library
  (name fileutils)
  (public_name fileutils)
  (wrapped false)
  (modules fileUtil filePath commonPath extensionPath filePath_type
    fileStringExt unixPath win32Path fileUtilMode fileUtilTypes
    fileUtilPermission fileUtilSize fileUtilMisc fileUtilSTAT fileUtilUMASK
    fileUtilCHMOD fileUtilTEST fileUtilPWD fileUtilREADLINK fileUtilWHICH
    fileUtilMKDIR fileUtilTOUCH fileUtilFIND fileUtilRM fileUtilCP fileUtilMV
    fileUtilCMP fileUtilDU fileUtilLS)
  (libraries unix bytes stdlib-shims))

(library
  (name fileutils_str)
  (public_name fileutils.str)
  (wrapped false)
  (modules fileUtilStr)
  (libraries fileutils str))
